<resources>
    <string name="app_name">Sugar Friendly</string>
    <string name="profile_picture_description">profile picture</string>
    <string name="greeting_text">Hey Roee</string>
    <string name="homePagePromptQuestion">How is your sugar now?</string>
    <string name="EditText_search_bar_hint">Search</string>
    <string name="dish_image_description">dish_image</string>
    <string name="TextView_dish_item_dish_name">Dish name</string>
    <string name="TextView_dish_item_restaurant">Restaurant</string>
    <string name="TextView_recommendations_label">Recommendations</string>
    <string name="TextView_top_rated_label">Community’s top rated</string>
    <string name="navbar_home_button_text">Home</string>
    <string name="navbar_map_button_text">Map</string>
    <string name="navbar_plus_button_text">Plus</string>
    <string name="navbar_camera_button_text">Camera</string>
    <string name="navbar_profile_button_text">Profile</string>
    <string name="TextView_newest_label">Community’s newest additions</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_add">Add</string>
    <string name="title_camera">Camera</string>
    <string name="title_profile">Profile</string>
    <string name="profileGreetingMessage">Hi Roee!</string>
    <string name="roee_lapushin">Roee Lapushin</string>
    <string name="num_of_recommendations">23 recommendations</string>
    <string name="inbox_button_text">Inbox</string>
    <string name="settings_button_text">Settings</string>
    <string name="your_favorites_label">Your favorites</string>
    <string name="send_us_paragraph">Enjoy the recommendations?\nYou can send us your own recommendations and earn points!</string>
    <string name="send_recommendation_button_text">Send recommendation</string>
    <string name="upload_image_from_device">Upload image from device</string>
    <string name="upload_image">Upload Image</string>
    <string name="image_taken_by_the_user">image taken by the user</string>
    <string name="welcome">Welcome!</string>
    <string name="rating">rating</string>
    <string name="exit_button">exit button</string>
    <string name="title_search">search</string>
    <string name="i">I</string>
    <string name="hi">HI</string>
    <string name="sugar_rating">sugar rating</string>
    <string name="camera">Camera</string>
    <string name="add_without_photo">Add without photo</string>
    <string name="camera_roll">Camera Roll</string>
    <string name="add_a_dish">Add a dish</string>
    <string name="no_photo">No Photo</string>
    <string name="lets_find_you_a_dish">Let\'s find\nyou a dish!</string>
    <string name="_100">100</string>
    <string name="upload_image_button">upload image</string>
    <string name="star">star</string>
    <string name="spoon">spoon</string>
    <string name="your_sugar_now">Your sugar now</string>
    <string name="dish_name">Dish Name</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="address">Address</string>
    <string name="share">Share restaurant</string>
    <string name="map">Map</string>
    <string name="restaurant_page">Restaurant page</string>
    <string name="let_s_share_a_new_dish">Let\'s share\na new dish!</string>
    <string name="excellent">Excellent</string>
    <string name="okay">Okay</string>
    <string name="good">Good</string>
    <string name="share_your_dish_with_us">Share your dish with us!</string>
    <string name="share_dish">Share Dish</string>
    <string name="tags">Tags</string>
    <string name="predicted_food_items">Predicted Food Items</string>
    <string name="estimated_nutritional_values">Estimated Nutritional Values</string>
    <string name="sugar_level">Sugar Level</string>
    <string name="low">Low</string>
</resources>