<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.DishDetailsFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/dish_image_description"
        android:src="@drawable/sushi" />

    <TextView
        android:id="@+id/dish_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dish_name"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/restaurant_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:text="@string/restaurant_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="VisualLintBounds" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:gravity="center"
        tools:ignore="VisualLintBounds">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:paddingTop="5dp"
            app:backgroundTint="#D9D9D9"
            app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/map_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/map"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:paddingTop="5dp"
            app:backgroundTint="#D9D9D9"
            app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/venue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/venue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:paddingTop="5dp"
            app:backgroundTint="#D9D9D9"
            app:cornerRadius="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        tools:ignore="VisualLintBounds">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/spoon"
            android:maxWidth="18dp"
            android:maxHeight="18dp"
            android:scaleType="fitCenter"
            android:src="@drawable/empty_spoon_64" />

        <TextView
            android:id="@+id/sugarRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="70dp"
            android:text="@string/sugar_rating"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/star"
            android:maxWidth="20dp"
            android:maxHeight="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_star_24" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/rating"
            android:textSize="16sp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/close_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:letterSpacing="0.0"
        android:stateListAnimator="@null"
        app:backgroundTint="#FFFFFF"
        app:elevation="0dp"
        app:icon="@drawable/baseline_keyboard_arrow_left_24"
        app:iconGravity="textEnd"
        app:iconSize="70dp"
        app:strokeWidth="0.0dp"
        app:iconPadding="0dp"
        tools:ignore="SpeakableTextPresentCheck,VisualLintBounds" />

</LinearLayout>