<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileFragment">


    <TextView
        android:id="@+id/profileGreetingMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileGreetingMessage"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal|top"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:paddingBottom="25dp"
        android:gravity="left|center"
        android:background="@drawable/bottom_line">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/circle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/profile_picture_description"
            app:layout_constraintStart_toStartOf="@id/profileGreetingMessage"
            app:shapeAppearanceOverlay="@style/circleImageView"
            app:srcCompat="@drawable/profile_picture" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp" >
            <TextView
                android:id="@+id/fullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roee_lapushin"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/numOfRecommendations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_of_recommendations"
                android:textSize="17sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/baseline_arrow_forward_ios_24"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintBounds" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:gravity="left|center" >
    <Button
        android:id="@+id/inboxButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inbox_button_text"
        android:layout_marginLeft="20dp"
        android:background="#00000000"
        android:drawableLeft="@drawable/baseline_mail_24"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/settings_button_text"
        android:background="#00000000"
        android:drawableLeft="@drawable/baseline_settings_24"
        tools:ignore="ButtonStyle" />
    </LinearLayout>

    <TextView
        android:id="@+id/favoritesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/your_favorites_label"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favorites"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:padding="10dp"
        android:background="@drawable/topper">

        <TextView
            android:id="@+id/yourRecommendationsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_us_paragraph"
            android:textColor="#455A64"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/sendUsButton"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_marginRight="5dp"
            android:background="#00000000"
            android:padding="0dp"
            android:text="@string/send_recommendation_button_text"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yourRecommendationsLabel"
            tools:ignore="TextSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>