<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/dishImageContainer"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/dishImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/dish_image_description"
                android:scaleType="fitXY"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@drawable/sushi" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/dishName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TextView_dish_item_dish_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/restaurantName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TextView_dish_item_restaurant"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="3dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/star"
                    android:maxWidth="15dp"
                    android:maxHeight="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/baseline_star_24"
                    app:tint="#F7B75B"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/rating"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="3dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/spoon"
                    android:maxWidth="13dp"
                    android:maxHeight="13dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/full_spoon_64" />

                <TextView
                    android:id="@+id/sugarRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/sugar_rating"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/distanceToDish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="end"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#80D9D9D9"
        android:layout_marginHorizontal="10dp"
        />
</LinearLayout>