<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/captured_image"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/dish_image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/sushi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/share_your_dish_with_us"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="VisualLintBounds" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/dish_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dish_name_textInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/restaurant_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/restaurant_name_textInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tags_textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/tags">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tags_textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup_flex_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                app:alignContent="space_around"
                app:alignItems="stretch"
                app:flexWrap="wrap"
                app:justifyContent="center"
                app:showDivider="beginning|middle|end" />

            <TextView
                android:id="@+id/predicted_food_items_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/predicted_food_items"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup_predicted_food_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                app:alignContent="space_around"
                app:alignItems="stretch"
                app:flexWrap="wrap"
                app:justifyContent="center"
                app:showDivider="beginning|middle|end" />

            <TextView
                android:id="@+id/estimated_nutritional_values_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/estimated_nutritional_values"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/nutritional_values_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="100dp"
                android:stretchColumns="*" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal"
                tools:ignore="VisualLintBounds">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/spoon"
                    android:maxWidth="18dp"
                    android:maxHeight="18dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/full_spoon_64" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/sugar_level"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/sugarLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="70dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/low"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_corners_dark_green" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="40dp"
                android:paddingVertical="12dp"
                android:text="@string/share_dish"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="#009876"
                app:cornerRadius="10dp"
                app:strokeWidth="1dp" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>

