<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="260dp"
        android:layout_height="190dp"
        app:cardCornerRadius="15.5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/dishImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/dish_image_description"
                android:scaleType="fitXY"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/dish_list_item"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dishName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/TextView_dish_item_dish_name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/restaurantName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/TextView_dish_item_restaurant"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:background="#8B8989" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/star"
                        android:maxWidth="20dp"
                        android:maxHeight="20dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/baseline_star_24" />

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:text="@string/rating"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/spoon"
                        android:maxWidth="18dp"
                        android:maxHeight="18dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/empty_spoon_64" />

                    <TextView
                        android:id="@+id/sugarRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:text="@string/sugar_rating"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/distanceToDish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/likeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="122dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/baseline_favorite_border_24"/>

        </RelativeLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>